# weather-tauri

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.css  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  config.rs  ipwhois.rs  lib.rs  main.rs  weather.rs
src/components/: WeatherToolbar.vue  WeatherWindow.vue  weather-layout.vue  weather-toolbar.vue
src/pages/about/: about.vue
src/pages/settings/: settings.vue
src/pages/weather/: weather.vue
src/pages/weather/composables/: use-weather.ts
src/pages/weather/constants/: weather-icons.ts
src/utils/: format-number.ts  store.ts
