[package]
name = "weather-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ureq = "2.9"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
current_locale = "0.1.1"
once_cell = "1.21.3"
log = "0.4.27"
dirs = "6.0.0"
tokio = "1.44.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
